--- a/compose.yaml
+++ b/compose.yaml
@@ -8,13 +8,30 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
+  frontend:
     build:
       context: .
+    container_name: auxibee_blog
+    restart: unless-stopped
     environment:
       NODE_ENV: production
+
+  caddy:
+    image: caddy/caddy:2.1.1-alpine
+    container_name: caddy-service
+    restart: unless-stopped
     ports:
-      - 443:8080
+      - "80:80"
+      - "443:443"
+    volumes:
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
+      - $PWD/site:/srv
+      - caddy_data:/data
+      - caddy_config:/config
+
+volumes:
+  caddy_data:
+  caddy_config:
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
 # start the database before your application. The `db-data` volume persists the
